fix wrapping issue in the calendar view

--- a/src/App.scss
+++ b/src/App.scss
@@ -266,3 +266,10 @@ h3 {
   }
 }
 
+svg .task p {
+  font-size: 0.95rem;
+  hyphens: auto;
+  overflow: hidden;
+  margin: 0.25rem;
+}
+
